alterações e nova branch

--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header class="header">
-       <a href="/index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
+       <a href="../index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
         <nav class="nav">
             <ul class="ul">
               <li>
-                <a href="../noticias_da_semana/noticias_da_semana.html">NOTÍCIAS DA SEMANA</a></li>      
+                <a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
               <li>
-                <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">DICAS E TUTORIAIS</a></li>    
+                <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
               <li>
-                <a href="./cursos.html">CURSOS</a></li>
+                <a href="./cursos.html">Cursos</a></li>
               <li>
-                <a href="../historia_da_programacao/historia_da_programacao.html">HISTÓRIA DA PROGRAMAÇÃO</a></li>
+                <a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
               <li>
-                <a href="../sobre_quem_somos/desenvolvedores.html">SOBRE QUEM SOMOS</a></li>        
+                <a href="../sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>        
             </ul>
           </nav>
     </header>
