--- a/historia_da_programacao/historia_da_programacao.html
+++ b/historia_da_programacao/historia_da_programacao.html
@@ -11,7 +11,7 @@
       <a href="../index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog" /></a>
       <nav class="nav">
       <ul class="ul">
-        <li class="li"><a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
+        <li><a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
         <li><a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
         <li><a href="../cursos/cursos.html">Cursos</a></li>
         <li><a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
@@ -19,7 +19,7 @@
        </ul>
       </nav>
     </header>     
-
+      <main>
         <h1>Pequena história da programação</h1>       
 
         <section class="section">
@@ -97,7 +97,7 @@
         
         <p class="p">E assim, com muito código e café, essas linguagens continuam a festa digital, criando o futuro do código de uma maneira
             descolada!</p>    
-        
+          </main>
         <footer>
           <p>Todos os direitos reservados <span>&#169;</span> 2023 Blog da TI</p>
           <p>Veja o repósitório da página:</p>
