--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -33,10 +33,7 @@
       <h2>Fique por dentro das últimas notícias do mundo da programação!</h2>
 
         <section>
-          <h3>
-            Quer saber como funciona um gerenciador de senhas?
-
-
+          <h3>Quer saber como funciona um gerenciador de senhas?</h3>
             <p>
               Em nosso cotidiano, usamos diversos serviços que precisam de senha.
               E-mail, rede social, aplicações usadas no trabalho...
@@ -44,11 +41,7 @@
               por isso a importância de recorrer a um gerenciador de senhas.
               Porém, o que é exatamente um gerenciador de senhas e como ele funciona? É sobre isso que
               falaremos a seguir, além de oferecer algumas opções de serviço para você usar.
-
             </p>
-
-          </h3>
-
             <a href="https://www.tecmundo.com.br/seguranca/274356-funciona-gerenciador-senhas.htm" target="_blank">
               <img height="250px" width="350px"
               src="https://tm.ibxk.com.br/2023/11/29/29151319216254.jpeg?ims=1280x480"
