--- a/dicas_e_tutoriais/dicas_e_tutoriais.html
+++ b/dicas_e_tutoriais/dicas_e_tutoriais.html
@@ -7,25 +7,20 @@
     <link rel="stylesheet" href="index_dicas_e_tuto.css">
 </head>
 <body>
-
   <header class="header">
     <a href="../index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog" /></a>
     <nav class="nav">
       <ul class="ul">
-        <li class="li"> <a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
+        <li> <a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
         <li><a href="./dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
         <li><a href="../cursos/cursos.html">Cursos</a></li>
         <li><a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
         <li><a href="../sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>
        </ul>
     </nav>
-   
   </header>
-    
     <main>
-
       <h1>Dicas e tutoriais</h1>
-
       <img class="imagemdicas" 
       src="./img/dicas.png" alt="Imagem representativa da expressão eureca.">
       
