--- a/historia_da_programacao/historia_da_programacao.html
+++ b/historia_da_programacao/historia_da_programacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="historia.css">
+    <link rel="stylesheet" href="./historia.css">
     <title>História da Programação</title>
 </head>
   <body>
