alterações estilos e respossivo

--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -22,11 +22,11 @@
               <li>
                 <a href="../historia_da_programacao/historia_da_programacao.html">HISTÓRIA DA PROGRAMAÇÃO</a></li>
               <li>
-                <a href="../sobre_quem_somos/desenvolvedores.html">SOBRE QUEM SOMOS</a></li>        
+                <a href="../sobre_quem_somos/desenvolvedores.html">QUEM SOMOS</a></li>        
             </ul>
           </nav>
     </header>
-    <main>
+    <main class="main">
         <h1>CURSOS</h1>
             <section>
             <ul>
