--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="header-style.css">
+    <link rel="stylesheet" href="home-main-style.css">
+    <link rel="stylesheet" href="footer-style.css">
     <title>Hub da TI</title>
 </head>
-
 <body>
-
   <header class="header">
     <a href="./index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog"/></a>
     <nav class="nav">
       <ul class="ul">
-        <li class="li"> <a href="./noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
-        <li><a href="./dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>    
+        <li class="li"> <a href="./noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>
+        <li><a href="./dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>
         <li><a href="./cursos/cursos.html">Cursos</a></li>
         <li><a href="./historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
-        <li><a href="./sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>
+        <li><a href="./quem_somos/desenvolvedores.html">Quem Somos</a></li>
        </ul>
     </nav>
-   
+
   </header>
 
   <main>
@@ -29,7 +29,7 @@
       <li>Cansado de seu emprego atual?</li>
       <li>Pensa em uma nova formação?</li>
       <li>Gosta de novas tecnologias?</li>
-      <li> Talvez seja o momento de descobrir o mundo da programação, 
+      <li> Talvez seja o momento de descobrir o mundo da programação,
         uma das áreas que mais cresce no mercado de trabalho.</li>
       <img class="telahome"
       src="./img/telahome.jpeg"
@@ -37,14 +37,14 @@
 
     </ul>
 
-  
+
     <h1>
       Bem-vindo ao nosso blog!
     </h1>
     <h2>
-      Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da programção.
-    </h2>  
-  
+      Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da programação.
+    </h2>
+
     <section>
       <h3>Notícias da Semana</h3>
       <p>Fique por dentro das últimas notícias do mundo da programação!</p>
