--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notícias da semana</title>
-    <link rel="stylesheet" href="index_not_da_sem.css">
+    <link rel="stylesheet" href="../header-style.css">
+    <link rel="stylesheet" href="noticias-main-style.css">
+    <link rel="stylesheet" href="../footer-style.css">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
         <li><a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>
         <li><a href="../cursos/cursos.html">Cursos</a></li>
         <li><a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
-        <li><a href="../sobre_quem_somos/desenvolvedores.html">Sobre Quem Somos</a></li>
+        <li><a href="../sobre_quem_somos/">Quem Somos</a></li>
        </ul>
     </nav>
 
