--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../header-style.css">
     <link rel="stylesheet" href="noticias-main-style.css">
     <link rel="stylesheet" href="../footer-style.css">
+    <script src="noticias-script.js" defer></script>
 </head>
 
 <body>
@@ -33,6 +34,30 @@
       src="./img/lendo_jornal.jpg" alt="Imagem de uma pessoa lendo jornal.">
 
       <h2>Fique por dentro das últimas notícias do mundo da programação!</h2>
+
+        <h4>Calendário</h4>
+
+        <div class="calendar">
+
+          <div class="dias-semana">
+            <span>Domingo</span>
+            <span>Segunda</span>
+            <span>Terça</span>
+            <span>Quarta</span>
+            <span>Quinta</span>
+            <span>Sexta</span>
+            <span>Sábado</span>
+          </div>
+
+          <div class="dias-numericos">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
+        </div>
 
         <section>
           <h3>
