--- a/dicas_e_tutoriais/dicas_e_tutoriais.html
+++ b/dicas_e_tutoriais/dicas_e_tutoriais.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../header-style.css">
     <link rel="stylesheet" href="dicas-main-style.css">
     <link rel="stylesheet" href="../footer-style.css">
+    <script src="dicas-script.js" defer></script>
 </head>
 <body>
 
@@ -26,59 +27,14 @@
 
     <main>
 
-      <h1>Dicas e tutoriais</h1>
-
       <img class="imagemdicas"
       src="./img/dicas.png" alt="Imagem representativa da expressão eureca.">
 
       <h2>Confima as dicas e alguns tutoriais que disponibilizamos para você!</h2>
 
-      <h3>
-        Quer aprender a fazer seu primeiro site usando HTML + CSS?
-        Venha conferir com Adriana Saty!
-      </h3>
-        <section>
+      <section>
 
-          <a href="https://www.youtube.com/watch?v=n_Etdr7Dbjs" target="_blank">
-            <img height="200px" width="850px"
-            src="./img/youtube_adriana.png"
-            alt="Imagem do canal Adriana Saty no Youtube">
-
-          <h4>Canal Adriana Saty</h4>
-
-          <p>
-            Nesse vídeo Andriana te ensina a fazer um site simples dando várias dicas práticas!
-            E mais! Usando apenas HTML e CSS! </p>
-
-          </p>
-          </a>
-
-        </section>
-
-        <h3>
-          Quer aprender a fazer seu primeiro portfólio de um modo fácil e rápido?
-          Descubra mais com Gabriela Pinheiro! </h3>
-
-        <section>
-            <a href="https://www.youtube.com/watch?v=jZurhyJTJOM" target="_blank">
-                <img height="200px" width="850px"
-                src="./img/youtube_gabriela.png"
-                alt="magem do canal Gabriela Pinheiro no Youtube">
-
-                <h4>Canal Gabriela Pinheiro</h4>
-
-
-
-              <p>
-              Nesse vídeo Gabriela ensina como criar um portfolio rápido e fácil do zero!
-              Utilizando somente html e css você vai, em 30 minutos, criar um site profissional,
-              com animações e que vai alavancar suas entrevistas.Como bônus,
-              você vai desenvolver a versão mobile do portfolio. </p>
-
-            </a>
-
-
-        </section>
+      </section>
 
     </main>
 
