--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
         <li><a href="./sobre_quem_somos/desenvolvedores.html">Quem Somos</a></li>
        </ul>
     </nav>
-
   </header>
 
   <main>
-
     <ul>
       <li>Cansado de seu emprego atual?</li>
       <li>Pensa em uma nova formação?</li>
@@ -34,16 +32,11 @@
       <img class="telahome"
       src="./img/telahome.jpeg"
       alt="Imagem retratando as tantas opções de códigos de programação."/>
-
     </ul>
 
+    <h1>Bem-vindo ao nosso blog!</h1>
 
-    <h1>
-      Bem-vindo ao nosso blog!
-    </h1>
-    <h2>
-      Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da programação.
-    </h2>
+    <h2>Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da programação.</h2>
 
     <section>
       <h3>Notícias da Semana</h3>
@@ -62,7 +55,7 @@
       <p>Conheça um pouco da história da programação.</p>
     </section>
     <section>
-      <h3>Sobre Quem Somos</h3>
+      <h3>Quem Somos</h3>
       <p>Saiba mais sobre essa equipe que está aqui pra te ajudar!</p>
     </section>
 
