--- a/dicas_e_tutoriais/dicas_e_tutoriais.html
+++ b/dicas_e_tutoriais/dicas_e_tutoriais.html
@@ -22,22 +22,19 @@
         <li><a href="../sobre_quem_somos/desenvolvedores.html">Quem Somos</a></li>
        </ul>
     </nav>
-
   </header>
-
     <main>
 
       <img class="imagemdicas"
       src="./img/dicas.png" alt="Imagem representativa da expressão eureca.">
 
-      <h2>Confima as dicas e alguns tutoriais que disponibilizamos para você!</h2>
+      <h2>Confima algumas dicas e tutoriais que disponibilizamos para você!</h2>
 
       <section>
 
       </section>
 
     </main>
-
   <footer>
     <p>Todos os direitos reservados <span>&#169;</span> 2023 Blog da TI</p>
     <p>Veja o repósitório da página:</p>
