--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -6,24 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Cursos</title>
+    <script src="/cursos/script.js"></script>r
 </head>
 <body>
     <header class="header">
-       <a href="../index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
+        <a href="../index.html"><img class="logo" src="./img/hub.png" alt="Logotipo do Blog"></a>
+        <button id="menuBtn" class="menu-btn">&#9776; MENU</button>
         <nav class="nav">
             <ul class="ul">
-              <li>
-                <a href="../noticias_da_semana/noticias_da_semana.html">NOTÍCIAS DA SEMANA</a></li>      
-              <li>
-                <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">DICAS E TUTORIAIS</a></li>    
-              <li>
-                <a href="./cursos.html">CURSOS</a></li>
-              <li>
-                <a href="../historia_da_programacao/historia_da_programacao.html">HISTÓRIA DA PROGRAMAÇÃO</a></li>
-              <li>
-                <a href="../sobre_quem_somos/quem_somos.html">QUEM SOMOS</a></li>        
+                <li>
+                    <a href="../noticias_da_semana/noticias_da_semana.html">NOTÍCIAS DA SEMANA</a>
+                </li>
+                <li>
+                    <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">DICAS E TUTORIAIS</a>
+                </li>
+                <li>
+                    <a href="./cursos.html">CURSOS</a>
+                </li>
+                <li>
+                    <a href="../historia_da_programacao/historia_da_programacao.html">HISTÓRIA DA PROGRAMAÇÃO</a>
+                </li>
+                <li>
+                    <a href="../sobre_quem_somos/quem_somos.html">QUEM SOMOS</a>
+                </li>
             </ul>
-          </nav>
+        </nav>
     </header>
     
     <main class="main">
