Responsividade e menu hamburguer

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="header-style.css">
-    <link rel="stylesheet" href="home-main-style.css">
-    <link rel="stylesheet" href="footer-style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/header-style.css" />
+    <link rel="stylesheet" href="./styles/home-main-style.css" />
+    <link rel="stylesheet" href="./styles/footer-style.css" />
+    <script src="./styles/header_script.js" defer></script>
     <title>Hub da TI</title>
 </head>
 <body>
@@ -17,61 +18,74 @@
         <li><a href="./dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>
         <li><a href="./cursos/cursos.html">Cursos</a></li>
         <li><a href="./historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
-        <li><a href="./sobre_quem_somos/desenvolvedores.html">Quem Somos</a></li>
+        <li><a href="./sobre_quem_somos/quem_somos.html">Quem Somos</a></li>
        </ul>
     </nav>
   </header>
 
-  <main>
-    <ul>
-      <li>Cansado de seu emprego atual?</li>
-      <li>Pensa em uma nova formação?</li>
-      <li>Gosta de novas tecnologias?</li>
-      <li> Talvez seja o momento de descobrir o mundo da programação,
-        uma das áreas que mais cresce no mercado de trabalho.</li>
-      <img class="telahome"
-      src="./img/telahome.jpeg"
-      alt="Imagem retratando as tantas opções de códigos de programação."/>
-    </ul>
+    <main>
+      <ul>
+        <li>Cansado de seu emprego atual?</li>
+        <li>Pensa em uma nova formação?</li>
+        <li>Gosta de novas tecnologias?</li>
+        <li>
+          Talvez seja o momento de descobrir o mundo da programação, uma das
+          áreas que mais cresce no mercado de trabalho.
+        </li>
+        <img
+          class="telahome"
+          src="./img/telahome.jpeg"
+          alt="Imagem retratando as tantas opções de códigos de programação."
+        />
+      </ul>
 
-    <h1>Bem-vindo ao nosso blog!</h1>
+      <h1>Bem-vindo ao nosso blog!</h1>
 
-    <h2>Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da programação.</h2>
+      <h2>
+        Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da
+        programação.
+      </h2>
 
-    <section>
-      <h3>Notícias da Semana</h3>
-      <p>Fique por dentro das últimas notícias do mundo da programação!</p>
-    </section>
-    <section>
-      <h3>Dicas e Tutoriais</h3>
-      <p>Descubra as principais ferramentas de programação.</p>
-    </section>
-    <section>
-      <h3>Cursos</h3>
-      <p>Navegue pelos melhores cursos que selecionamos para sua formação.</p>
-    </section>
-    <section>
-      <h3>História da Programação</h3>
-      <p>Conheça um pouco da história da programação.</p>
-    </section>
-    <section>
-      <h3>Quem Somos</h3>
-      <p>Saiba mais sobre essa equipe que está aqui pra te ajudar!</p>
-    </section>
+      <section>
+        <h3>Notícias da Semana</h3>
+        <p>Fique por dentro das últimas notícias do mundo da programação!</p>
+      </section>
+      <section>
+        <h3>Dicas e Tutoriais</h3>
+        <p>Descubra as principais ferramentas de programação.</p>
+      </section>
+      <section>
+        <h3>Cursos</h3>
+        <p>Navegue pelos melhores cursos que selecionamos para sua formação.</p>
+      </section>
+      <section>
+        <h3>História da Programação</h3>
+        <p>Conheça um pouco da história da programação.</p>
+      </section>
+      <section>
+        <h3>Quem Somos</h3>
+        <p>Saiba mais sobre essa equipe que está aqui pra te ajudar!</p>
+      </section>
 
-    <h2>
-      Fique conosco e descubra muito mais!!!
-    </h2>
-  </main>
+      <h2>Fique conosco e descubra muito mais!!!</h2>
+    </main>
 
-  <footer>
-    <p>Todos os direitos reservados <span>&#169;</span> 2023 Blog da TI</p>
-    <p>Veja o repósitório da página:</p>
-    <a href="https://github.com/BarachoSilva/codigo-e-cafe" target="_blank">Repositório</a>
-    <p>Clique abaixo e conheça a Proz Educação</p>
-    <a href="https://prozeducacao.com.br/" target="_blank">Proz Educação</a>
-  </footer>
+    <footer>
+      <p>Todos os direitos reservados <span>&#169;</span> 2024 Blog da TI</p>
+      <p>Conheça a Proz Educação</p>
+      <a href="https://prozeducacao.com.br/" target="_blank"
+        ><img
+          src="./sobre_quem_somos/assets/icons/proz_logo.png"
+          alt="Logo da Proz Educação"
+      /></a>
+      <p>Visite o repositório do blog</p>
 
-</body>
-
+      <a href="https://github.com/BarachoSilva/codigo-e-cafe" target="_blank"
+        ><img
+          class="redesFooter"
+          src="./sobre_quem_somos/assets/icons/github.png"
+          alt="Ícone do repositório do blog no GitHub."
+      /></a>
+    </footer>
+  </body>
 </html>
