--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Cursos</title>
-    <script src="script.js"></script>r
+    <script src="script.js"></script>
 </head>
 <body>
     <header class="header">
