--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
 
   <main>
     <ul>
+      <div>
       <li>Cansado de seu emprego atual?</li>
       <li>Pensa em uma nova formação?</li>
       <li>Gosta de novas tecnologias?</li>
       <li> Talvez seja o momento de descobrir o mundo da programação,
         uma das áreas que mais cresce no mercado de trabalho.</li>
+      </div>
+      <div>
       <img class="telahome"
       src="./img/telahome.jpeg"
       alt="Imagem retratando as tantas opções de códigos de programação."/>
+      </div>
     </ul>
 
     <h1>Bem-vindo ao nosso blog!</h1>
