--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -58,7 +58,7 @@
     </table>
   </span>
   <span>
-    Para encontrar notícias de um dia específico utilize o calendário ao lado!
+    <h4>Para encontrar notícias de um dia específico utilize o calendário ao lado!</h4>
   </span>
   </div>
 
@@ -78,3 +78,4 @@
 
 </body>
 </html>
+
