atualizado pela main

--- a/historia_da_programacao/historia_da_programacao.html
+++ b/historia_da_programacao/historia_da_programacao.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="historia.css">
-    <title>História da Programação</title>
+    <link rel="stylesheet" href="../styles/header-style.css">
+    <link rel="stylesheet" href="../styles/footer-style.css">
+    <script src="historia.js" defer></script>
+    <script src="../styles/header_script.js" defer></script>
+        <title>História da Programação</title>
 </head>
   <body>
     <header class="header">
       <a href="../index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog" /></a>
+      <button id="menuBtn" class="menu-btn" onclick="clickMenu()">&#9776;</button>
       <nav class="nav">
       <ul class="ul">
         <li class="li"><a href="../noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>      
