--- a/index.html
+++ b/index.html
@@ -7,36 +7,57 @@
     <link rel="stylesheet" href="home-main-style.css">
     <link rel="stylesheet" href="footer-style.css">
     <title>Hub da TI</title>
-</head>
-<body>
-  <header class="header">
-    <a href="./index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog"/></a>
-    <nav class="nav">
-      <ul class="ul">
-        <li class="li"> <a href="./noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a></li>
-        <li><a href="./dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>
-        <li><a href="./cursos/cursos.html">Cursos</a></li>
-        <li><a href="./historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
-        <li><a href="./sobre_quem_somos/quem_somos.html">Quem Somos</a></li>
-       </ul>
-    </nav>
-  </header>
+  </head>
+  <body>
+    <header class="header">
+      <a href="./index.html">
+        <img class="logo" src="./img_home/hub.png" alt="Logotipo do Blog"
+      /></a>
+      <button id="menuBtn" class="menu-btn" onclick="clickMenu()">
+        &#9776;
+      </button>
+      <nav id="menu" class="nav">
+        <ul class="ul">
+          <li class="li">
+            <a href="./noticias_da_semana/noticias_da_semana.html"
+              >Notícias da Semana</a
+            >
+          </li>
+          <li>
+            <a href="./dicas_e_tutoriais/dicas_e_tutoriais.html"
+              >Dicas e Tutoriais</a
+            >
+          </li>
+          <li><a href="./cursos/cursos.html">Cursos</a></li>
+          <li>
+            <a href="./historia_da_programacao/historia_da_programacao.html"
+              >História da Programação</a
+            >
+          </li>
+          <li><a href="./sobre_quem_somos/quem_somos.html">Quem Somos</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <main>
-    <ul>
-      <div>
-      <li>Cansado de seu emprego atual?</li>
-      <li>Pensa em uma nova formação?</li>
-      <li>Gosta de novas tecnologias?</li>
-      <li> Talvez seja o momento de descobrir o mundo da programação,
-        uma das áreas que mais cresce no mercado de trabalho.</li>
-      </div>
-      <div>
-      <img class="telahome"
-      src="./img/telahome.jpeg"
-      alt="Imagem retratando as tantas opções de códigos de programação."/>
-      </div>
-    </ul>
+    <main>
+      <ul>
+        <div>
+          <li>Cansado de seu emprego atual?</li>
+          <li>Pensa em uma nova formação?</li>
+          <li>Gosta de novas tecnologias?</li>
+          <li>
+            Talvez seja o momento de descobrir o mundo da programação, uma das
+            áreas que mais cresce no mercado de trabalho.
+          </li>
+        </div>
+        <div>
+          <img
+            class="telahome"
+            src="./img_home/telahome.jpeg"
+            alt="Imagem retratando as tantas opções de códigos de programação."
+          />
+        </div>
+      </ul>
 
     <h1>Bem-vindo ao nosso blog!</h1>
 
