--- a/sobre_quem_somos/quem_somos.html
+++ b/sobre_quem_somos/quem_somos.html
@@ -34,7 +34,7 @@
             >
           </li>
           <li>
-            <a href="./desenvolvedores.html"
+            <a href="./quem_somos.html"
               >Quem Somos</a
             >
           </li>
