--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <a href="./index.html">
-        <img class="logo" src="./img/hub.png" alt="Logotipo do Blog"
+        <img class="logo" src="./img_home/hub.png" alt="Logotipo do Blog"
       /></a>
       <button id="menuBtn" class="menu-btn" onclick="clickMenu()">
         &#9776;
@@ -51,7 +51,7 @@
       </div>
       <div>
       <img class="telahome"
-      src="./img/telahome.jpeg"
+      src="./img_home/telahome.jpeg"
       alt="Imagem retratando as tantas opções de códigos de programação."/>
       </div>
     </ul>
