--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -61,7 +61,7 @@
     </table>
   </span>
   <span>
-    <h4>Para encontrar notícias de um dia específico utilize o calendário a cima!</h4>
+    <h4>Para encontrar notícias de uma data específica clique no dia correspondente direto no calendário!</h4>
   </span>
   </div>
 
