--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
       </section>
 
       <h2>Fique conosco e descubra muito mais!!!</h2>
+      <div>
+        <h2>Curta a página ouvindo nossa playlist!!!</h2>
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/playlist/5oXikMpeH9JXyUp7wifsnM?utm_source=generator&theme=0&autoplay=1&shuffle=true"
+          width="100%"
+          height="152"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <br />
     </main>
 
     <footer>
