Correção do menu hamburger

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <a href="./index.html">
         <img class="logo" src="./img_home/hub.png" alt="Logotipo do Blog"/></a>
-      <button id="menuBtn" class="menu-btn" onclick="clickMenu()">&#9776;</button>
+      <button id="menuBtn" class="menu-btn" >&#9776;</button>
       <nav id="menu" class="nav">
         <ul class="ul">
           <li class="li">
