--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -106,15 +106,25 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
         </section>
         <div class="cadastro-section">
             <form class="cadastro-form">
-                <h2>Cadastro</h2>
+                <h3>Faça seu cadastro e concorra a gratuidade de um curso de sua preferência!</h3>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required>
 
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="telefone">Telefone:</label>
-                <input type="tel" id="telefone" name="telefone">
+                <label for="telefone">telefone:</label>
+                <input type="tel" id="telefone" name="telefone" required>
+
+                <label for="tech">Qual o curso de sua preferida?</label>
+
+                <select name="tech" id="tech">
+                  <option value=""></option>
+                  <option value="1">Algoritmos</option>
+                  <option value="2">Git e Github</option>
+                  <option value="3">HTML e CSS</option>
+                  <option value="4">JavaScript</option>
+                </select>
 
                 <button type="submit">Cadastrar</button>
             </form>
