Correção estilos cursos e dicas

--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -113,19 +113,19 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
                 <label for="email">E-mail:</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="telefone">telefone:</label>
+                <label for="telefone">Telefone:</label>
                 <input type="tel" id="telefone" name="telefone" required>
 
-                <label for="tech">Qual o curso de sua preferida?</label>
-
-                <select name="tech" id="tech">
-                  <option value=""></option>
-                  <option value="1">Algoritmos</option>
-                  <option value="2">Git e Github</option>
-                  <option value="3">HTML e CSS</option>
-                  <option value="4">JavaScript</option>
-                </select>
-
+                <label class="cursosTech" for="tech">Qual o curso de sua Preferência?</label>
+                <div class="selecao">
+                    <select name="" class="tech">
+                    <option value=""></option>
+                    <option value="1">Algoritmos</option>
+                    <option value="2">Git e Github</option>
+                    <option value="3">HTML e CSS</option>
+                    <option value="4">JavaScript</option>
+                    </select>
+                </div>
                 <button type="submit">Cadastrar</button>
             </form>
         </div>
