--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -106,7 +106,7 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
         </section>
         <div class="cadastro-section">
             <form class="cadastro-form">
-                <h3>Faça seu cadastro e concorra a gratuidade de um curso de sua preferência!</h3>
+                <h3>Faça seu cadastro e concorra a gratuidade de um curso de sua preferência!*</h3>
 
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required>
@@ -138,6 +138,7 @@ Curso completo para quem quer aprender a criar sites utilizando as tecnologias d
                 </div>
               
                 <button type="submit">Cadastrar</button>
+                <h4>*Os sorteios são todo dia 1º de cada mês e divulgado através do email cadastrado.</h4>
             </form>
         </div>
     </main>
