--- a/index.html
+++ b/index.html
@@ -12,42 +12,55 @@
   <body>
     <header class="header">
       <a href="./index.html">
-        <img class="logo" src="./img_home/hub.png" alt="Logotipo do Blog"/></a>
-      <button id="menuBtn" class="menu-btn" >&#9776;</button>
+        <img class="logo" src="./img_home/hub.png" alt="Logotipo do Blog"
+      /></a>
+      <button id="menuBtn" class="menu-btn">&#9776;</button>
       <nav id="menu" class="nav">
         <ul class="ul">
           <li class="li">
-            <a href="./noticias_da_semana/noticias_da_semana.html">Notícias da Semana</a>
+            <a href="./noticias_da_semana/noticias_da_semana.html"
+              >Notícias da Semana</a
+            >
           </li>
           <li>
-            <a href="./dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a>
+            <a href="./dicas_e_tutoriais/dicas_e_tutoriais.html"
+              >Dicas e Tutoriais</a
+            >
           </li>
           <li>
-            <a href="./cursos/cursos.html">Cursos</a></li>
-          <li>
-            <a href="./historia_da_programacao/historia_da_programacao.html">História da Programação</a>
+            <a href="./cursos/cursos.html">Cursos</a>
           </li>
           <li>
-            <a href="./sobre_quem_somos/quem_somos.html">Quem Somos</a></li>
+            <a href="./historia_da_programacao/historia_da_programacao.html"
+              >História da Programação</a
+            >
+          </li>
+          <li>
+            <a href="./sobre_quem_somos/quem_somos.html">Quem Somos</a>
+          </li>
         </ul>
       </nav>
     </header>
 
-  <main>
-    <ul>
-      <div>
-      <li>Cansado de seu emprego atual?</li>
-      <li>Pensa em uma nova formação?</li>
-      <li>Gosta de novas tecnologias?</li>
-      <li> Talvez seja o momento de descobrir o mundo da programação,
-        uma das áreas que mais cresce no mercado de trabalho.</li>
-      </div>
-      <div>
-      <img class="telahome"
-      src="./img_home/telahome.jpeg"
-      alt="Imagem retratando as tantas opções de códigos de programação."/>
-      </div>
-    </ul>
+    <main>
+      <ul>
+        <div>
+          <li>Cansado de seu emprego atual?</li>
+          <li>Pensa em uma nova formação?</li>
+          <li>Gosta de novas tecnologias?</li>
+          <li>
+            Talvez seja o momento de descobrir o mundo da programação, uma das
+            áreas que mais cresce no mercado de trabalho.
+          </li>
+        </div>
+        <div>
+          <img
+            class="telahome"
+            src="./img_home/telahome.jpeg"
+            alt="Imagem retratando as tantas opções de códigos de programação."
+          />
+        </div>
+      </ul>
       <h1>Bem-vindo ao nosso blog!</h1>
       <h2>
         Aqui, você encontra tudo sobre o que de melhor ocorre no mundo da
@@ -74,20 +87,19 @@
         <p>Saiba mais sobre essa equipe que está aqui pra te ajudar!</p>
       </section>
       <h2>Fique conosco e descubra muito mais!!!</h2>
-      <div>
-        <h2>Curta a página ouvindo nossa playlist!!!</h2>
+      <h2>Curta a página ouvindo nossa playlist!!!</h2>
+      
+      <div class="spotfy">
+        
         <iframe
-          style="border-radius: 12px"
           src="https://open.spotify.com/embed/playlist/5oXikMpeH9JXyUp7wifsnM?utm_source=generator&theme=0&autoplay=1&shuffle=true"
-          width="100%"
-          height="152"
           frameborder="0"
           allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
           loading="lazy"
         ></iframe>
       </div>
-      <br/>
+      <br />
     </main>
 
     <footer>
