--- a/noticias_da_semana/noticias_da_semana.html
+++ b/noticias_da_semana/noticias_da_semana.html
@@ -1,71 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/header-style.css" />
-    <link rel="stylesheet" href="noticias-main-style.css">
-    <link rel="stylesheet" href="../styles/footer-style.css">
+    <link rel="stylesheet" href="noticias-main-style.css" />
+    <link rel="stylesheet" href="../styles/footer-style.css" />
     <script src="noticias-script.js" defer></script>
     <script src="../styles/header_script.js" defer></script>
     <title>Notícias da semana</title>
-</head>
-<body>
-  <header class="header">
-    <a href="../index.html"> <img class="logo" src="./img/hub.png" alt="Logotipo do Blog" /></a>
-    <button id="menuBtn" class="menu-btn" onclick="clickMenu()">&#9776;</button>
-    <nav id="menu" class="nav">
-      <ul class="ul">
-        <li class="li"> <a href="./noticias_da_semana.html">Notícias da Semana</a></li>
-        <li><a href="../dicas_e_tutoriais/dicas_e_tutoriais.html">Dicas e Tutoriais</a></li>
-        <li><a href="../cursos/cursos.html">Cursos</a></li>
-        <li><a href="../historia_da_programacao/historia_da_programacao.html">História da Programação</a></li>
-        <li><a href="../sobre_quem_somos/quem_somos.html">Quem Somos</a></li>
-       </ul>
-    </nav>
-  </header>
+  </head>
+  <body>
+    <header class="header">
+      <a href="../index.html">
+        <img class="logo" src="./img/hub.png" alt="Logotipo do Blog"
+      /></a>
+      <button id="menuBtn" class="menu-btn" onclick="clickMenu()">
+        &#9776;
+      </button>
+      <nav id="menu" class="nav">
+        <ul class="ul">
+          <li class="li">
+            <a href="./noticias_da_semana.html">Notícias da Semana</a>
+          </li>
+          <li>
+            <a href="../dicas_e_tutoriais/dicas_e_tutoriais.html"
+              >Dicas e Tutoriais</a
+            >
+          </li>
+          <li><a href="../cursos/cursos.html">Cursos</a></li>
+          <li>
+            <a href="../historia_da_programacao/historia_da_programacao.html"
+              >História da Programação</a
+            >
+          </li>
+          <li><a href="../sobre_quem_somos/quem_somos.html">Quem Somos</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <main>
-    <img class="imagemnoticias"
-      src="./img/lendo_jornal.jpg" alt="Imagem de uma pessoa lendo jornal.">
-    <h2>Fique por dentro das últimas notícias do mundo da programação!</h2>
+    <main>
+      <img
+        class="imagemnoticias"
+        src="./img/lendo_jornal.jpg"
+        alt="Imagem de uma pessoa lendo jornal."
+      />
+      <h2>Fique por dentro das últimas notícias do mundo da programação!</h2>
 
-    <div>
-    <span>
-      <div class="navigation-buttons">
-        <button onclick="mudarMes(-1)">Mês anterior</button>
-        <h4 id="mesAtual"></h4>
-        <button onclick="mudarMes(1)">Próximo mês</button>
+      <div>
+        <span>
+          <div class="navigation-buttons">
+            <button onclick="mudarMes(-1)">Mês anterior</button>
+            <h4 id="mesAtual"></h4>
+            <button onclick="mudarMes(1)">Próximo mês</button>
+          </div>
+          <table id="calendar">
+            <thead>
+              <tr>
+                <th>Domingo</th>
+                <th>Segunda</th>
+                <th>Terça</th>
+                <th>Quarta</th>
+                <th>Quinta</th>
+                <th>Sexta</th>
+                <th>Sábado</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </span>
+        <span>
+          <h4>
+            Para encontrar notícias de uma data específica clique no dia
+            correspondente direto no calendário!
+          </h4>
+        </span>
       </div>
-    <table id="calendar">
-      <thead>
-        <tr>
-          <th>Domingo</th>
-          <th>Segunda</th>
-          <th>Terça</th>
-          <th>Quarta</th>
-          <th>Quinta</th>
-          <th>Sexta</th>
-          <th>Sábado</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
-  </span>
-  <span>
-    <h4>Para encontrar notícias de uma data específica clique no dia correspondente direto no calendário!</h4>
-  </span>
-  </div>
-    <section>
-    </section>
-  </main>
-  <footer>
-    <p>Todos os direitos reservados <span>&#169;</span> 2024 Blog da TI</p>
-    <p>Conheça a Proz Educação</p>
-    <a href="https://prozeducacao.com.br/" target="_blank"><img src="../sobre_quem_somos/assets/icons/proz_logo.png" alt="Logo da Proz Educação"></a>
-    <p>Visite o repositório do blog</p>
-    <a href="https://github.com/BarachoSilva/codigo-e-cafe" target="_blank"><img class="redesFooter" src="../sobre_quem_somos/assets/icons/github.png" alt="Ícone do repositório do blog no GitHub."></a>
-  </footer>
-</body>
+      <section></section>
+    </main>
+    <footer>
+      <p>Todos os direitos reservados <span>&#169;</span> 2024 Blog da TI</p>
+      <p>Conheça a Proz Educação</p>
+      <a href="https://prozeducacao.com.br/" target="_blank"
+        ><img
+          src="../sobre_quem_somos/assets/icons/proz_logo.png"
+          alt="Logo da Proz Educação"
+      /></a>
+      <p>Visite o repositório do blog</p>
+      <a href="https://github.com/BarachoSilva/codigo-e-cafe" target="_blank"
+        ><img
+          class="redesFooter"
+          src="../sobre_quem_somos/assets/icons/github.png"
+          alt="Ícone do repositório do blog no GitHub."
+      /></a>
+    </footer>
+  </body>
 </html>
