--- a/sobre_quem_somos/quem_somos.html
+++ b/sobre_quem_somos/quem_somos.html
@@ -221,6 +221,12 @@
         <label for="mensagem">Escreva sua mensagem:</label>
         <textarea name="userComment" id="mensagem" cols="30" rows="4"></textarea>
 
+        <p>Deseja receber nossa newsletter?</p>
+        <label for="sim">Sim</label>
+        <input id="sim" type="radio" name="question1">
+        <label for="nao">Não</label>
+        <input id="nao" type="radio" name="question1">
+
         <button class="btnForm" type="submit">Enviar</button>
       </form>
       <div class="final"></div>
